src/styles/_navbar.scss
// top nav, contained in Header.jsx
#navbar {
    background-color: $color__project-theme;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    color: $color__project-inverse !important;

    a {
        color: $color__project-inverse;
        text-decoration: none;
    
        &.brand {
            h3 {
                color: $color__project-inverse;
                font-size: 1.5em;
                line-height: 100%;
                margin-top: 2px;
                margin-bottom: 2px;
                display: inline-block;
            }
        }
    }

    img {
        margin-bottom: 0px;
        float: left;
    }

    #menu-responsive {
        // display off in all cases to start with
        display: none;
        // will have .menu-show class applied if menu is open
        &.menu-show {
            // restrict to tablet-down in case we resize with the menu open
            @include for-tablet-down {
                clear: both;
                position: relative;
                display: block;
                a {
                    float: none;
                    display: block;
                    text-align: left;
                }
            }
        }
    }

    // hamburger is referenced as class icon
    .icon {
        width: 40px;
        padding: 1px 8px;
        background-color: $color__project-theme;
        border: 1px solid $color__project-inverse;
        border-radius: 4px 4px 4px 4px;
        float: right;
        display: block;
        // recognise when mouse hovers over the button
        &:hover {
            background-color: lighten($color__project-theme, 10%);
        }
        // don't show at all on a wide screen
        @include for-desktop-only {
            display: none;
        }
        // the horizontal bars that make it a burger
        .icon-bar {
            background-color: $color__project-inverse;
            border-radius: 2px 2px 2px 2px;
            height: 2px;
            margin: 6px 0;
            width: 100%;
        }
    }
}

// right-nav (only shows on wide screens) contained in RightMenu.jsx
#right-nav {
    
    h3.archive-header {
        display: inline-block;
        padding-bottom: 0.1em;
        border-bottom: 2px solid $color__project-complementary;
        color: $color__project-theme;
        margin-bottom: 0.5em;
        font-size: 1.25rem;
    }

    // style the 'year links'to remove gaps after headers
    h3.year-header {
        margin-bottom: 0.2em;
        font-size: 1.1rem;
    }

    // style the 'standard' links to be block
    a {
        display: block;
        // and bold (which are the years) to  not move when hovered over
        &.bold-link {
            transition: none;
            font-weight: bold;
            &:hover {
                margin-left: 0px;
            }
        }
    }

    // current link will have a line underneath, generated as a border, so the link needs to be
    // inline-block but needs to be wrapped in a block div so that they're on different lines
    .a-wrapper {
        display: block;

        a {
            transition: 0.25s;
            text-decoration: none;
            display: inline-block;
            &:hover {
                margin-left: 6px;
            }
            &.highlighted {
                border-bottom: 1px solid $color__project-complementary;
                margin-bottom: -1px;
            }
            &.not-highlighted {
                margin-bottom: 0px;
            }
        }
    }

    // make year hide/show using concepts from
    // https://gomakethings.com/how-to-add-transition-animations-to-vanilla-javascript-show-and-hide-methods/
    .year {
        display: none;
        height: 0;
        transition: height 350ms ease-in-out;
        &.open {
            display: block;
            height: auto;
        }
    }
}

#calendar {
    .date {
        margin: auto;
        text-align: center;
        font-size: 16px;
    }
    .back-button {
        float: left;
        &::after {
            content: "\276e";
            margin-left: -2px;
        }
    }
    .fwd-button {
        float: right;
        &::after {
            content: "\276f";
            margin-left: -1px;
        }
    }
    .back-button, .fwd-button {
        margin-top: 2px;
        border: 0px;
        border-radius: 50%;
        background-color: $color__project-complementary;
        color: $color__project-inverse;
        width: 20px;
        height: 20px;
        font-size: 18px;
        line-height: 1;
        font-weight: 600;
        // deliberately back-to-front so only affects Safari
        transform: translate(0, 0);
        -webkit-transform: translate(0, -2px);
    }

    .calendar-days {
        width: 14%;
        text-align: center;
        font-size: 12px;
        display: inline-block;
    }

    .calendar-row {
        font-size: 10px;
        margin: 0;
        padding: 0;
        height: 32px;

        .cell-wrapper {
            width: 14%;
            display: inline-block;
            line-height: 0px;

               .cell {
                    height: 32px;
                    border: 1px solid white;
                    font-size: 10px;
                    padding-top: 8px;
                    padding-left: 2px;

                    .circle {
                        position: relative;
                        left: 9px;
                        bottom: 1px;
                        color: white;
                        border-radius: 50%;
                        height: 20px;
                        width: 20px;
                        padding: 0px;
                        margin: 0px;
                        display: inherit;

                        .circle-text {
                            position: relative;
                            left: 6px;
                            top: 10px;
                            font-size: 12px;
                            line-height: 0px;
                            padding: 0;
                            margin: 0;
                            display: inline-block;
                        }
                    }
                    
                    .training {
                        background-color: rgba($color__project-theme, 0.8); 
                    }

                    .race {
                        background-color: $color__project-theme;
                    }
                    .race-training {
                        background-color: $color__project-theme;
                        
                        .circle-text {
                            left: 3px;
                        }
                    }
                }

                .blank-cell {
                    background-color: white;
                }

                .date-cell {
                    background-color: rgba($color__project-complementary, 0.15);
                }

                .weekend {
                    background-color: rgba($color__project-complementary, 0.3);
                }
        }

        .popup {
            position: absolute;
            width: 150px;
            margin-left: -150px;
            margin-top: -30px;
            font-size: 14px;
            line-height: 14px;
            color: white;
            background-color: $color__project-theme;
            border-radius: 0.5em;
            border: none;
            padding: 0.3em;

            p {
                margin: 0.4em;
            }

        }
    }
}

